# sioxc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  chat.md
.github/workflows/: ci.yml
crates/siox-cli/: Cargo.toml
crates/siox-cli/src/: main.rs
crates/siox-cli/tests/: build_binary.rs
crates/siox-diag/: Cargo.toml
crates/siox-diag/src/: lib.rs
crates/siox-elab/: Cargo.toml
crates/siox-elab/src/: lib.rs
crates/siox-ir/: Cargo.toml
crates/siox-ir/src/: lib.rs
crates/siox-llvm/: Cargo.toml
crates/siox-llvm/src/: aot.rs  emit.rs  jit.rs  lib.rs
crates/siox-llvm/tests/: differential.rs  jit.rs
crates/siox-lsp/: Cargo.toml
crates/siox-lsp/src/: main.rs
crates/siox-resolve/: Cargo.toml
crates/siox-resolve/src/: lib.rs
crates/siox-run/: Cargo.toml
crates/siox-run/src/: lib.rs
crates/siox-sim/: Cargo.toml
crates/siox-sim/src/: lib.rs
crates/siox-syntax/: Cargo.toml
crates/siox-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  token.rs
crates/siox-types/: Cargo.toml
crates/siox-types/src/: lib.rs
crates/siox-wave/: Cargo.toml
crates/siox-wave/src/: lib.rs
crates/sioxc/: Cargo.toml
crates/sioxc/src/: build.rs  main.rs
crates/sioxc/tests/: build_binary.rs  custom_operators.rs  positional_struct.rs  struct_spread.rs  testbench_methods.rs
crates/sioxc/tests/fixtures/: counter_test.siox  custom_operator_test.siox  method_test.siox
docs/: IMPLEMENTATION.md  README.md  architecture.md  editor.md  implementation.md  interoperability.md  language-changes.md  language-features.md  language.md  roadmap.md  simulation.md  siox_phase1_digital_spec.md  siox_three_phase_roadmap.md  spec.md  std.md  testing.md  waveforms.md
docs/notes/: bug-hunt-log.md  literal-suffixes.md  llvm-backend.md  siox-derived-types-proposal.md  siox-signal-container-sizing-proposal.md  siox-where-keyword-proposal.md  std-loading.md  std-proposal.md  timing-and-await.md
docs/proposals/: llvm-backend.md  timing-and-await.md  xz-vector-propagation.md
examples/: array_test.siox  attr_test.siox  await_test.siox  bus_test.siox  complex_test.siox  convert_test.siox  counter.siox  counter_tb.siox  counter_test.siox  derive_chain_test.siox  derive_test.siox  family_test.siox  ffi_test.siox  fifo_test.siox  fn_test.siox  from_test.siox  fs_test.siox  fsm_test.siox  generate_test.siox  generic_test.siox  hierarchy_test.siox  inout_test.siox  instances_test.siox  iterate_test.siox  logic_test.siox  math_test.siox  multiclock_test.siox  mux_test.siox  print_test.siox  rand_text_test.siox  range_test.siox  regfile_test.siox  register_test.siox  riscv_alu_test.siox  riscv_decode_test.siox  signed_test.siox  slice_write_test.siox  spi_test.siox  std_test.siox  stream_test.siox  (+5 more)
src/: diag.rs  elab.rs  ir.rs  lib.rs  resolve.rs  run.rs  types.rs  wave.rs
src/llvm/: aot.rs  emit.rs  jit.rs  mod.rs
src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  pretty.rs  token.rs
std/: assert.siox  attrs.siox  bits.siox  fs.siox  logic.siox  math.siox  numeric.siox  ops.siox  prelude.siox  rand.siox  sim.siox  text.siox
std/logic/: unresolved.siox
tests/: build_binary.rs  custom_operators.rs  jit.rs  positional_struct.rs  struct_spread.rs  testbench_methods.rs
tests/fixtures/: positional_struct_test.siox  struct_spread_test.siox
