[package]
name = "siox"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Siox-lang/sioxc"
authors = ["siox contributors"]
description = "siox (silicon oxide): a digital hardware description language and simulator"

# One library holds the whole compiler pipeline as modules; two binaries wrap it.
[lib]
name = "siox"
path = "src/lib.rs"

# The compiler / simulator CLI.
[[bin]]
name = "sioxc"
path = "src/bin/sioxc/main.rs"

# The language server (skeleton; speaks over stdio once implemented).
[[bin]]
name = "siox-lsp"
path = "src/bin/siox-lsp/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# inkwell is optional and behind the `llvm` feature: the frontend-only build
# (`--no-default-features`) needs no LLVM toolchain. Pinned to the local LLVM
# (22); bump the feature to match your `llvm-config`.
inkwell = { version = "0.9.0", default-features = false, features = ["llvm22-1", "target-x86"], optional = true }

[features]
# LLVM is the only backend (the language is compiled-first). Build the frontend
# without a toolchain via `--no-default-features`; `sioxc test` then has no
# engine, and `siox-lsp` (frontend-only) is best built this way.
default = ["llvm"]
llvm = ["dep:inkwell"]

[profile.release]
lto = "thin"
