[workspace]
members = ["crates/siox-llvm", "crates/sioxc", "crates/siox-lsp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Siox-lang/sioxc"
authors = ["siox contributors"]

[workspace.dependencies]
# The backend-independent core (this package) and the LLVM backend, as path deps.
siox = { path = "." }
siox-llvm = { path = "crates/siox-llvm" }
clap = { version = "4", features = ["derive"] }

# The root package is `siox`: the backend-independent compiler core (pipeline
# through IR + the simulation kernel + waveform export). It links no LLVM
# toolchain, so a frontend consumer (`siox-lsp`) can depend on it alone.
[package]
name = "siox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "siox (silicon oxide): the backend-independent compiler core"

[lib]
name = "siox"
path = "src/lib.rs"

[profile.release]
lto = "thin"
