[package]
name = "siox-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The siox language server (skeleton)"

[[bin]]
name = "siox-lsp"
path = "src/main.rs"

[dependencies]
# The language server needs only the backend-independent core (frontend +
# IR/lints for diagnostics), never the LLVM backend — so this crate does NOT
# depend on `siox-llvm`, and building it needs no LLVM toolchain.
siox.workspace = true
