[package]
name = "siox-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
siox-diag.workspace = true
siox-syntax.workspace = true
siox-elab.workspace = true
siox-ir.workspace = true
siox-run.workspace = true

[dev-dependencies]
# Used only to lower real source in the integration tests.
siox-resolve.workspace = true
siox-types.workspace = true
