[package]
name = "sioxc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sioxc"
path = "src/main.rs"

[dependencies]
siox-diag.workspace = true
siox-syntax.workspace = true
siox-resolve.workspace = true
siox-types.workspace = true
siox-elab.workspace = true
siox-ir.workspace = true
siox-run.workspace = true
siox-wave.workspace = true
# default-features off at the workspace level (no inkwell); sioxc's `llvm`
# feature (below) enables `siox-llvm/llvm` when an LLVM toolchain is present.
siox-llvm.workspace = true
clap.workspace = true

[features]
# LLVM is the only backend (the language is compiled-first). Build the frontend
# without a toolchain via `--no-default-features`; `siox test` then has no engine
# and reports that it cannot run a design.
default = ["llvm"]
# Enable the LLVM backend commands (`siox emit-llvm`). Requires a matching
# LLVM toolchain; the default `siox` binary builds without it.
llvm = ["siox-llvm/llvm"]
