[package]
name = "sioxc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The siox compiler / simulator CLI"

[[bin]]
name = "sioxc"
path = "src/main.rs"

[dependencies]
siox.workspace = true
siox-llvm.workspace = true
clap.workspace = true
