[package]
name = "sioxc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The siox compiler / simulator CLI"

[[bin]]
name = "sioxc"
path = "src/main.rs"

[dependencies]
siox.workspace = true
siox-llvm.workspace = true
clap.workspace = true

[features]
default = []
# Forward the backend codegen features (see crates/siox-llvm/Cargo.toml):
#   cargo build -p sioxc --features simd     # host SIMD (256/512-bit vectors)
#   cargo build -p sioxc --features wide     # >64-bit signals (experimental)
#   cargo build -p sioxc --features f128     # quad float (experimental)
simd = ["siox-llvm/simd"]
wide = ["siox-llvm/wide"]
f128 = ["siox-llvm/f128"]
bitpack = ["siox-llvm/bitpack"]
